@@ -422,6 +422,11 @@ subtest make_output => sub {
             [qw<moo-5 moo-5-moo moo_5>],
             "Moo-5 moo-5-moo moo_5.",
         ],
+        [
+            "::Class Class:: ::Foo::Bar Foo::Bar:: Foo::Bar",
+            [qw<::Class Class:: ::Foo::Bar Foo::Bar:: Foo::Bar>],
+            "::Class Class:: ::Foo::Bar Foo::Bar:: Foo::Bar",
+        ],
     );
 
     my $toke = Hailo::Tokenizer::Words->new();
