@@ -2,6 +2,8 @@ Revision history for Hailo
 
 {{$NEXT}}
 
+    - Word tokenizer: Improve matching of Perl class names
+
 0.66 2011-04-27 07:37:45
 
     - Die when the user tries --stats without a brain
